--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
 }
 
 .code{
-    background-image: url("/image/blue\ design.jpg");
+    background-image: url("image/blue\ design.jpg");
     color:#E8E8E8;
     background-size: cover;
     background-blend-mode:multiply;
