--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@
     background-color: #7E7C73;
 }
 .code{
-    background-image: url("/image/blue\ design.jpg");
+    background-image: url("image/blue design.jpg");
     color:#E8E8E8;
     background-size: cover;
     background-blend-mode:multiply;
