--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
     background-color: #7E7C73;
 }
 .code{
-    background-image: url('blue design.jpg');
+    background-image: url("blue design.jpg");
     color:#E8E8E8;
     background-size: cover;
     background-blend-mode:multiply;
