--- a/css/style2.css
+++ b/css/style2.css
@@ -29,9 +29,23 @@
   .signup input[type="submit"] {
     background-color: white;
     color: black;
+    font-style: italic;
+    font-weight:lighter;
     cursor: pointer;
   }
+  input[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+  }
   
+  input[type="submit"]:hover {
+    background-color: #45a049;
+  }
   footer {
     margin-top: 20px;
   }
