--- a/css/style3.css
+++ b/css/style3.css
@@ -158,7 +158,7 @@
 
   
 .code {
-  background-image: url("/image/blue design.jpg");
+  background-image: url('blue design.jpg');
   color: #E8E8E8;
   background-size: cover;
   background-blend-mode: multiply;
