--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,6 @@ body {
   font-style: italic;
   font-family: ;
   color: white;
-  background-color: #8F00FF;
   border: 2px solid transparent;
   border-radius: 4px;
   cursor: pointer;
@@ -111,11 +110,11 @@ body {
 
 
 .Intemation {
-  background-color: bisque;
-  border-left: #BABABA;
-  border-right: #BABABA;
-  margin: 20px;
-  padding: 20px;
+  background-color: #505ba0;
+  border-color: #6674CC;
+  margin: 2%;
+  padding: 2%;
+  color: whitesmoke;
 }
 
 .journey {
@@ -131,9 +130,13 @@ body {
 }
 
 .joinus {
-  background-color: antiquewhite;
-  margin: 20px;
-  padding: 20px;
+  background-color: #f8f8fd;
+    margin: 2%;
+    padding: 2%;
+    color: #262626;
+}
+a{
+  text-decoration: none;
 }
 
 .joinus ul {
@@ -217,5 +220,5 @@ padding: 20px;
 }
 a{
   text-decoration: none;
-  color:black;
+  color: black;
 }
