--- a/css/style3.css
+++ b/css/style3.css
@@ -63,11 +63,11 @@ span{
 }
 #myimg {
   display: block;
-  margin: 15px auto;
-  border-radius: 49%;
+  margin: 5%;
+  border-radius: 100%;
 }
 .taught{
-  background-color: aliceblue;
+  background-color: #f8f8fd;
 }
 .faq strong{
   font-weight: 400;
@@ -134,4 +134,8 @@ details[open] summary:after{
 
 details[open] div{
   padding: .5em 1em;
+}
+@media (min-width: 768px) and (max-width: 990.9px){
+.container{
+    flex-basis: 49.2%;}
 }
