--- a/css/style3.css
+++ b/css/style3.css
@@ -27,7 +27,7 @@ a{
     font-weight: bold;
   }
   .joinnow{
-    background-image: url(/image/pexels-miguel-á-padriñán-255379.jpg);
+    background-image: url(image/pexels-miguel-á-padriñán-255379.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-color: bisque;
