--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,5 @@
 /**
-* Template Name: FlexStart
-* Updated: Jun 19 2023 with Bootstrap v5.3.0
-* Template URL: https://bootstrapmade.com/flexstart-bootstrap-startup-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
+* ----------------------------*/
 :root {
   scroll-behavior: smooth;
 }
